@@ -233,12 +233,16 @@ EXTRA_DIST= \
 	vmspecific/java/lang/VMProcess.java \
 	vmspecific/java/lang/VMRuntime.java \
 	vmspecific/java/lang/VMSystem.java \
+	vmspecific/java/lang/VMSystem.java.orig \
 	vmspecific/java/lang/VMThread.java \
 	vmspecific/java/lang/VMThrowable.java \
 	vmspecific/java/lang/ref/Reference.java \
 	vmspecific/java/lang/reflect/Constructor.java \
+	vmspecific/java/lang/reflect/Constructor.java.orig \
 	vmspecific/java/lang/reflect/Field.java \
+	vmspecific/java/lang/reflect/Field.java.orig \
 	vmspecific/java/lang/reflect/Method.java \
+	vmspecific/java/lang/reflect/Method.java.orig \
 	vmspecific/java/lang/reflect/VMArray.java \
 	vmspecific/java/lang/reflect/VMProxy.java \
 	vmspecific/java/net/InetAddress.java \
